[package]
name = "gencam_server"
version = "0.0.0"
authors = ["Mit Bailey <mitbailey@outlook.com>, Sunip Mukherjee <sunipkmukherjee@gmail.com>"]
edition = "2021"

[dependencies]
image = "0.25.2"
refimage = { version = "0.11.0", features = ["image"] }
tungstenite = { version = "0.23.0" }
gencam_packet = { path = "../gencam_packet" }
serde = "1.0.210"
serde_json = "1.0.128"
