[package]
name = "gencam_server"
version = "0.0.0"
authors = ["Mit Bailey <mitbailey@outlook.com>, Sunip Mukherjee <sunipkmukherjee@gmail.com>"]
edition = "2021"

[dependencies]
image = "0.25.2"
refimage = { version = "0.11.0", features = ["image"] }
tungstenite = { version = "0.23.0" }
gencam_packet = { git = "https://github.com/mitbailey/gencam_packet", commit = "0699721" }
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
futures-util = "0.3.31"
log = "0.4.22"
env_logger = "0.11.5"
tokio-tungstenite = "*"
futures-channel = "0.3.31"
